--- a/index.html
+++ b/index.html
@@ -411,52 +411,57 @@
                         <img class="carousel--team-img" src="assets/team/tetsuro.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Tetsuro Masunaga</h3>
                         <p class="carousel--team-title text-white">CEO & Co-founder</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
+                        <a class="btn" href="https://www.linkedin.com/in/tetsuro-masunaga-12370b62/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/kazuya.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Kazuya Saginawa</h3>
+                        <p class="carousel--team-title text-white">Director & Co-founder</p>
+                        <a class="btn" href="https://www.linkedin.com/in/kazuya-saginawa/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/ashish.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Ashish Malhotra</h3>
+                        <p class="carousel--team-title text-white">Director</p>
+                        <a class="btn" href="https://www.linkedin.com/in/ashish-malhotra-2609344/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/gautam.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Gautam Bajaj</h3>
+                        <p class="carousel--team-title text-white">Technical Architech</p>
+                        <a class="btn" href="https://www.linkedin.com/in/d34th4ck3r/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/mukta.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Mukta Arora</h3>
+                        <p class="carousel--team-title text-white">Sales Lead</p>
+                        <a class="btn" href="https://www.linkedin.com/in/muktaarora/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
                         <img class="carousel--team-img" src="assets/team/yuria.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Yuria Kondo</h3>
                         <p class="carousel--team-title text-white">Business Development / Sales Manager</p>
                         <a class="btn" href="https://www.linkedin.com/in/yuria-kondo/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/kazuya.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Kazuya Saginawa</h3>
-                        <p class="carousel--team-title text-white">Director & Co-founder</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/kazuya-saginawa/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
                         <img class="carousel--team-img" src="assets/team/deepali.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Deepali Varshney</h3>
                         <p class="carousel--team-title text-white">Technical Project Manager</p>
                         <a class="btn" href="https://www.linkedin.com/in/deepalivarshney/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/ashish.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Ashish Malhotra</h3>
-                        <p class="carousel--team-title text-white">Director</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/ashish-malhotra-2609344/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
                         <img class="carousel--team-img" src="assets/team/john.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">John Keyser</h3>
                         <p class="carousel--team-title text-white">Recruiting Manager</p>
                         <a class="btn" href="https://www.linkedin.com/in/john-b-keyser-b63911161/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/gautam.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Gautam Bajaj</h3>
-                        <p class="carousel--team-title text-white">Technical Architech</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/d34th4ck3r/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
                         <img class="carousel--team-img" src="assets/team/kelly.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Kelly Martin</h3>
                         <p class="carousel--team-title text-white">Digital Marketing Manager</p>
                         <a class="btn" href="https://www.linkedin.com/in/kj-martin/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/mukta.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Mukta Arora</h3>
-                        <p class="carousel--team-title text-white">Sales Lead</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/muktaarora/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
                         <img class="carousel--team-img" src="assets/team/sarfraz.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Sarfraz Petkar</h3>
                         <p class="carousel--team-title text-white">Community Manager</p>
@@ -466,52 +471,57 @@
                         <img class="carousel--team-img" src="assets/team/raquel.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Raquel Baptista</h3>
                         <p class="carousel--team-title text-white">Competition and Business Operations</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/raquel-baptista/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
+                        <a class="btn" href="https://www.linkedin.com/in/raquel-baptista/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/saksham.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Saksham Kukreja</h3>
+                        <p class="carousel--team-title text-white">Chief Strategic Data Analyst</p>
+                        <a class="btn" href="https://www.linkedin.com/in/sakshamkukreja/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/sidharth.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Sidharth Sharma</h3>
+                        <p class="carousel--team-title text-white">Community Operations</p>
+                        <a class="btn" href="https://www.linkedin.com/in/sddhrthsharma/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/baljender.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Baljender Singh</h3>
+                        <p class="carousel--team-title text-white">Community Operations</p>
+                        <a class="btn" href="https://www.linkedin.com/in/baljender-singh-5b5b82102/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/sameep.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Sameep Singhania</h3>
+                        <p class="carousel--team-title text-white">Blockchain Engineer</p>
+                        <a class="btn" href="https://www.linkedin.com/in/sameepsi/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
                         <img class="carousel--team-img" src="assets/team/dharmendra.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Dharmendra Jha</h3>
                         <p class="carousel--team-title text-white">Full Stack Engineer</p>
                         <a class="btn" href="https://www.linkedin.com/in/dkjhaj2ee/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/saksham.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Saksham Kukreja</h3>
-                        <p class="carousel--team-title text-white">Chief Strategic Data Analyst</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/sakshamkukreja/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
                         <img class="carousel--team-img" src="assets/team/ayoub.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Ayoub Kada</h3>
                         <p class="carousel--team-title text-white">UI/UX Designer</p>
                         <a class="btn" href="https://www.linkedin.com/in/ayoub-kada-906655a0/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/sidharth.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Sidharth Sharma</h3>
-                        <p class="carousel--team-title text-white">Community Operations</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/sddhrthsharma/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
                         <img class="carousel--team-img" src="assets/team/naushad.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Naushad Ahmad</h3>
                         <p class="carousel--team-title text-white">Full Stack Engineer</p>
                         <a class="btn" href="https://www.linkedin.com/in/naushadahmad2470/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/baljender.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Baljender Singh</h3>
-                        <p class="carousel--team-title text-white">Community Operations</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/baljender-singh-5b5b82102/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
                         <img class="carousel--team-img" src="assets/team/mayank.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Mayank Gupta</h3>
                         <p class="carousel--team-title text-white">QA Engineer</p>
                         <a class="btn" href="https://www.linkedin.com/in/mayankgupta332/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/sameep.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Sameep Singhania</h3>
-                        <p class="carousel--team-title text-white">Blockchain Engineer</p>
-                        <a class="btn mb3" href="https://www.linkedin.com/in/sameepsi/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-
                         <img class="carousel--team-img" src="assets/team/joey.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Joey Bertschler</h3>
                         <p class="carousel--team-title text-white">Content Writer</p>
