--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <div class="row">
                     <div class="column">
                         <h1 class="text-white mb1">GR: the bitgrit token</h1>
-                        <p class="lead text-white mb3">The cryptocurrency powering decentralized and democratic AI</p>
+                        <p class="lead text-white mb3">Powering decentralized and democratic AI</p>
                         <a class="btn" href="">Learn more</a>
                     </div>                 
                 </div>
