--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="assets/favicon.ico">
-        <title>GR: the bitgrit token</title>
+        <title>BGR: the bitgrit token</title>
         <meta name="description" content="Founded in Tokyo in 2017, bitgrit is an AI startup that has built up a strong community of over 20,000 data scientists worldwide.">
         <meta name="keywords" content="AI, blockchain, decentralized ecosystem, data scientists">
         <meta property="og:title" content="About bitgrit"/>
@@ -78,7 +78,7 @@
             <div class="container">
                 <div class="row">
                     <div class="column">
-                        <h1 class="text-white mb1">GR: the bitgrit token</h1>
+                        <h1 class="text-white mb1">BGR: the bitgrit token</h1>
                         <p class="lead text-white mb3">Powering decentralized and democratic AI</p>
                         <a class="btn" href="">Learn more</a>
                     </div>                 
@@ -138,7 +138,7 @@
                             </div>
                             <div class="media__body">
                                 <h3>Token Ecosystem</h3>
-                                <p class="text-white">GR is built on top of Ethereum’s ERC-20 protocol, the industry standard for smart contracts and issuance of original tokens. This protocol enables us to quantify the value of AI algorithms developed by data scientists on our platform.</p>
+                                <p class="text-white">BGR is built on top of Ethereum’s ERC-20 protocol, the industry standard for smart contracts and issuance of original tokens. This protocol enables us to quantify the value of AI algorithms developed by data scientists on our platform.</p>
                             </div>
                         </div>
                     </div>
@@ -170,7 +170,7 @@
                                     </tr>
                                     <tr>
                                         <th>Token Symbol</th>
-                                        <td>GR</td>
+                                        <td>BGR</td>
                                         <th>Token Type</th>
                                         <td>Utility</td>
                                         <th>Decimals</th>
@@ -265,7 +265,7 @@
                 <div class="row">
                     <div class="column">
                         <h2>Github Repository</h2>
-                        <p>Transparency of how our ecosystem works is one of the most important elements in our quest to democratize AI. Therefore, all our smart contracts that govern the GR tokenomics are publicly available on our GitHub repository. We also encourage users to participate in the token development process and be rewarded for their efforts. Check it out below!</p>
+                        <p>Transparency of how our ecosystem works is one of the most important elements in our quest to democratize AI. Therefore, all our smart contracts that govern the BGR tokenomics are publicly available on our GitHub repository. We also encourage users to participate in the token development process and be rewarded for their efforts. Check it out below!</p>
                         <a class="btn" href="">Learn more</a>
                     </div>
                     <div id="whitepaper" class="column">
@@ -290,7 +290,7 @@
                         <h3 class="text-white">2021 Q1</h3>
                         <div class="carousel--roadmap-body text-white text-left">
                             <ol>
-                                <li>Launch of GR token</li>
+                                <li>Launch of BGR token</li>
                                 <li>Support teams on competition platform to facilitate a collaborative ecosystem</li>
                                 <li>Develop collaboration computation contracts to measure relative contribution of members in development of AI models within a team.</li>
                             </ol>
@@ -356,7 +356,7 @@
                         <div class="carousel--roadmap-body text-white text-left">
                             <ol>
                                 <li>Launch developer tools and API communication with the bitgrit mainnet</li>
-                                <li>Additional cryptocurrency pairs for GR introduced</li>
+                                <li>Additional cryptocurrency pairs for BGR introduced</li>
                             </ol>
                         </div>
                     </div>
