--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                     <div class="column">
                         <h2>Github Repository</h2>
                         <p>Transparency of how our ecosystem works is one of the most important elements in our quest to democratize AI. Therefore, all our smart contracts that govern the BGR tokenomics are publicly available on our GitHub repository. We also encourage users to participate in the token development process and be rewarded for their efforts. Check it out below!</p>
-                        <a class="btn" href="">Learn more</a>
+                        <a class="btn" href="https://github.com/bitgrit-official/bgr-token" target="_blank" rel="noopener">Learn more</a>
                     </div>
                     <div id="whitepaper" class="column">
                         <h2>Whitepaper</h2>
@@ -640,7 +640,7 @@
         </section>
 
         <section class="bg-purple-1">
-            <div class="carousel-wrapper text-left">
+            <div class="carousel-wrapper">
                 <div class="row">
                     <div class="column text-center">
                         <h2 class="text-white">Blog</h2>
