--- a/index.html
+++ b/index.html
@@ -266,12 +266,12 @@
                     <div class="column">
                         <h2>Github Repository</h2>
                         <p>Transparency of how our ecosystem works is one of the most important elements in our quest to democratize AI. Therefore, all our smart contracts that govern the BGR tokenomics are publicly available on our GitHub repository. We also encourage users to participate in the token development process and be rewarded for their efforts. Check it out below!</p>
-                        <a class="btn" href="https://github.com/bitgrit-official/bgr-token" target="_blank" rel="noopener">Learn more</a>
+                        <a class="btn" href="https://github.com/bitgrit-official/bgr-token" target="_blank" rel="noopener" aria-label="github repository">Learn more</a>
                     </div>
                     <div id="whitepaper" class="column">
                         <h2>Whitepaper</h2>
                         <p>As a community-centered ecosystem that connects data scientists to companies in need of AI solutions, bitgrit uses modern technologies like Serverless Microservices and Federated Learning to level the playing field for all stakeholders – whether it be data scientists, corporations, or data providers. Read about our tech infrastructure and new token economy in our White Paper.</p>
-                        <a class="btn" href="assets/whitepaper.pdf" target="_blank">Learn more</a>
+                        <a class="btn" href="assets/whitepaper.pdf" target="_blank" aria-label="whitepaper">Learn more</a>
                     </div>
                 </div>
             </div>
