--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="column">
-                        <h2>AI ecosystem powered by our community</h2>
+                        <h2>An AI ecosystem powered by our community</h2>
                         <p class="lead">A comprehensive online platform that makes a democratic AI solution possible</p>
                     </div>
                 </div>
@@ -265,10 +265,11 @@
                 <div class="row">
                     <div class="column">
                         <h2>Github Repository</h2>
-                        <p>Transparency of how our ecosystem works is one of the most important elements in our quest to democratize AI. Therefore, all our smart contracts that govern the BGR tokenomics are publicly available on our GitHub repository. We also encourage users to participate in the token development process and be rewarded for their efforts. Check it out below!</p>
+                        <p>Transparency of how our ecosystem works is one of the most important elements in our quest to democratize AI. Therefore, all our smart contracts that govern the BGR tokenomics are publicly available on our GitHub repository. We also encourage users to participate in the token development process and be rewarded for their efforts. Check it out below:</p>
                         <a class="btn" href="https://github.com/bitgrit-official/bgr-token" target="_blank" rel="noopener" aria-label="github repository">Learn more</a>
                     </div>
-                    <div id="whitepaper" class="column">
+                    <div class="column">
+                        <span id="whitepaper" class="anchor"></span>
                         <h2>Whitepaper</h2>
                         <p>As a community-centered ecosystem that connects data scientists to companies in need of AI solutions, bitgrit uses modern technologies like Serverless Microservices and Federated Learning to level the playing field for all stakeholders – whether it be data scientists, corporations, or data providers. Read about our tech infrastructure and new token economy in our White Paper.</p>
                         <a class="btn" href="assets/whitepaper.pdf" target="_blank" aria-label="whitepaper">Learn more</a>
@@ -292,7 +293,7 @@
                             <ol>
                                 <li>Launch of BGR token</li>
                                 <li>Support teams on competition platform to facilitate a collaborative ecosystem</li>
-                                <li>Develop collaboration computation contracts to measure relative contribution of members in development of AI models within a team.</li>
+                                <li>Develop collaboration computation contracts to measure relative contribution of members in development of AI models within a team</li>
                             </ol>
                         </div>
                     </div>
@@ -371,7 +372,7 @@
                 <div class="row">
                     <div class="column text-center text-white">
                         <h2 class="text-white">Community</h2>
-                        <p class="lead">bitgrit has been building a community of data science and AI experts over the past three years. Here’s how you can connect and become a part of it:</p>
+                        <p class="lead">bitgrit has been building a community of data science and AI experts since 2017. Here’s how you can connect and become a part of it:</p>
                     </div>
                 </div>
                 <div class="row">
@@ -380,7 +381,7 @@
                     </div>
                     <div class="column text-white">
                         <h3 class="mt0 mb0">Events</h3>
-                        <p class="mt0 mb0">Want to network while learning about high-tech concepts? We organize regular events online and locally in Japan, India, Nigeria, and all around the world! Visit our Meetup page or contact us to learn more and join the discussion.</p>
+                        <p class="mt0 mb0">Want to network while learning about high-tech concepts? We organize regular events online and locally in Japan, India, Dubai, and all around the world! Visit our Meetup page or contact us to learn more and join the discussion.</p>
                         <div class="text-right">
                             <a class="mr1" href="https://www.meetup.com/bitgrit/" target="_blank" rel="noopener">Global&nbsp;></a><a class="mr1" href="https://www.meetup.com/Democratic-AI-by-bitgrit-Tokyo/" target="_blank" rel="noopener">Tokyo&nbsp;></a><a href="https://www.meetup.com/Democratic-AI-by-bitgrit-Dubai/" target="_blank" rel="noopener">Dubai&nbsp;></a>
                         </div>
