--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="column">
-                        <h2>An AI ecosystem powered by our community</h2>
-                        <p class="lead">A comprehensive online platform that makes a democratic AI solution possible</p>
+                        <h2>An AI ecosystem powered by the community</h2>
+                        <p class="lead">A comprehensive online platform that makes democratic AI solutions possible</p>
                     </div>
                 </div>
             </div>
@@ -118,7 +118,7 @@
             <div class="card bg-purple-4 text-white">
                 <div class="card__body">
                     <h2 class="text-white">AI Marketplace</h2>
-                    <p>We envision a platform where anyone can sell and purchase access to data and AI algorithms built from that data sourced from our bitgrit community. Once developed, the best solutions from competitions will be posted on the Marketplace.</p>
+                    <p>We envision a platform where anyone can sell and purchase access to data and AI algorithms built from data sourced from the bitgrit community. Once developed, users can find the best solutions from competitions available on the Marketplace.</p>
                 </div>
                 <div class="card__footer">
                     <a class="btn" href="" target="_blank">Coming soon</a>
@@ -223,7 +223,7 @@
                                     <td>10.00%</td>
                                 </tr>
                                 <tr>
-                                    <td>Partners Pool</td>
+                                    <td>Partner's Pool</td>
                                     <td>6.00%</td>
                                 </tr>
                                 <tr>
@@ -263,7 +263,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="column">
-                        <h2>Github Repository</h2>
+                        <h2>GitHub</h2>
                         <p>Transparency of how our ecosystem works is one of the most important elements in our quest to democratize AI. Therefore, all our smart contracts that govern the BGR tokenomics are publicly available on our GitHub repository. We also encourage users to participate in the token development process and be rewarded for their efforts. Check it out below:</p>
                         <a class="btn" href="https://github.com/bitgrit-official/bgr-token" target="_blank" rel="noopener" aria-label="github repository">Learn more</a>
                     </div>
@@ -428,7 +428,7 @@
                     <div class="column">
                         <img class="carousel--team-img" src="assets/team/gautam.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Gautam Bajaj</h3>
-                        <p class="carousel--team-title text-white">Technical Architech</p>
+                        <p class="carousel--team-title text-white">Technical Architect</p>
                         <a class="btn" href="https://www.linkedin.com/in/d34th4ck3r/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
@@ -440,7 +440,7 @@
                     <div class="column">
                         <img class="carousel--team-img" src="assets/team/yuria.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Yuria Kondo</h3>
-                        <p class="carousel--team-title text-white">Business Development / Sales Manager</p>
+                        <p class="carousel--team-title text-white">Business Development/Sales Manager</p>
                         <a class="btn" href="https://www.linkedin.com/in/yuria-kondo/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
@@ -686,38 +686,6 @@
             </div>
         </section>
 
-        <section>
-            <div class="container">
-                <div class="row">
-                    <div class="column">
-                        <h2 class="mt0">Get In Touch</h2>
-                        <p>Need help or have any queries? Feel free to contact us, we will get back to you within 24h.</p>
-                    </div>
-                    <div class="column--double">
-                        <form class="form" action="" method="post">
-                            <div class="form__row">
-                                <div class="form__column">
-                                    <div class="form__group">
-                                        <input type="text" placeholder="Full Name" id="name" name="name" aria-label="name" required>
-                                    </div>
-                                    <div class="form__group">
-                                        <input type="email" placeholder="Email" id="email" name="email" aria-label="email" required>
-                                    </div>
-                                </div>
-                                <div class="form__column">
-                                    <div class="form__group">
-                                        <textarea placeholder="Message" id="message" name="message" aria-label="message" required></textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <input class="btn" type="submit" value="Send Message">
-                            <div class="g-recaptcha" data-sitekey="6Le_YsQZAAAAAGImoQYnkZjyf-Yqskzstfxpx-c0"></div>
-                        </form>
-                    </div>
-                </div>
-            </div>
-        </section>
-
         <footer class="footer">
             <div class="container">
                 <div class="row">
@@ -748,7 +716,7 @@
                         <h3>Contact</h3>
                         <p>info@bitgrit.net</p>
                         <p>+81 342148315</p>
-                        <p>Koganei Building 4th Floor<br>3−4−3 Kamimeguro,<br>Meguro City, Tokyo 153-0051</p>
+                        <p>Koganei Building 4th Floor<br>3-4-3 Kamimeguro,<br>Meguro City, Tokyo 153-0051</p>
                     </div>
                 </div>
                 <div class="row footer__copyright">
@@ -756,7 +724,7 @@
                         <p>Copyright © bitgrit 2021</p>
                     </div>
                     <div class="column">
-                        <a href="https://bitgrit.net/info#terms" target="_blank" rel="noopener">Terms & Conditions</a> / <a href="https://bitgrit.net/info#privacy" target="_blank" rel="noopener">Privacy Policy</a>
+                        <a href="https://bitgrit.net/terms" target="_blank" rel="noopener">Terms & Conditions</a>/<a href="https://bitgrit.net/info#privacy" target="_blank" rel="noopener">Privacy Policy</a>
                     </div>
                 </div>
             </div>
