--- a/index.html
+++ b/index.html
@@ -5,13 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="icon" href="assets/favicon.ico">
         <title>BGR: the bitgrit token</title>
-        <meta name="description" content="Founded in Tokyo in 2017, bitgrit is an AI startup that has built up a strong community of over 20,000 data scientists worldwide.">
-        <meta name="keywords" content="AI, blockchain, decentralized ecosystem, data scientists">
-        <meta property="og:title" content="About bitgrit"/>
+        <meta name="description" content="BGR is the first ERC-20 token that is democratizing the value of Artificial Intelligence through the bitgrit platform. Data Scientists from all around the world can compete in AI competitions and search for relevant job opportunities. Companies in need for AI solutions can host competitions or access our AI marketplace (Coming Soon). Visit bitgrit.net">
+        <meta name="keywords" content="AI, BGR, bitgrit, blockchain, decentralized ecosystem, data scientists, competitions, arificial intelligence, machine learning, ML, AI marketplace, AI token, ethereum">
+        <meta property="og:title" content="BGR: The bitgrit Token"/>
         <meta property="og:type" content="website"/>
-        <meta property="og:url" content="https://www.bitgrit.net/"/>
-        <meta property="og:url" content="bitgrit"/>
-        <meta property="og:description" content="Founded in Tokyo in 2017, bitgrit is an AI startup that has built up a strong community of over 20,000 data scientists worldwide."/>
+        <meta property="og:url" content="https://token.bitgrit.net/"/>
+        <meta property="og:description" content="BGR is the first ERC-20 token that is democratizing the value of Artificial Intelligence through the bitgrit platform. Data Scientists from all around the world can compete in AI competitions and search for relevant job opportunities. Companies in need for AI solutions can host competitions or access our AI marketplace (Coming Soon). Visit bitgrit.net"/>
         <meta property="og:image" content="https://bitgrit.net/static/img/bitgrit_logo_1108x422.png"/>
         <link rel="canonical" href=""/>
 
