--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
                         <p>Copyright © bitgrit 2021</p>
                     </div>
                     <div class="column">
-                        <a href="https://bitgrit.net/terms" target="_blank" rel="noopener">Terms & Conditions</a>/<a href="https://bitgrit.net/info#privacy" target="_blank" rel="noopener">Privacy Policy</a>
+                        <a href="https://bitgrit.net/terms" target="_blank" rel="noopener">Terms & Conditions</a>/<a href="https://bitgrit.net/privacy" target="_blank" rel="noopener">Privacy Policy</a>
                     </div>
                 </div>
             </div>
