--- a/index.html
+++ b/index.html
@@ -425,12 +425,6 @@
                         <a class="btn" href="https://www.linkedin.com/in/ashish-malhotra-2609344/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
-                        <img class="carousel--team-img" src="assets/team/gautam.jpg" alt="team">
-                        <h3 class="carousel--team-name text-white">Gautam Bajaj</h3>
-                        <p class="carousel--team-title text-white">Technical Architect</p>
-                        <a class="btn" href="https://www.linkedin.com/in/d34th4ck3r/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
-                    </div>
-                    <div class="column">
                         <img class="carousel--team-img" src="assets/team/mukta.jpg" alt="team">
                         <h3 class="carousel--team-name text-white">Mukta Arora</h3>
                         <p class="carousel--team-title text-white">Sales Lead</p>
@@ -545,6 +539,12 @@
                         <h3 class="carousel--advisors-name text-white">Andy Sugino</h3>
                         <p class="carousel--advisors-title text-white">Chief Data Scientist</p>
                         <a class="btn" href="https://www.linkedin.com/in/atsushi-andy-sugino-58415276/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
+                    </div>
+                    <div class="column">
+                        <img class="carousel--team-img" src="assets/team/gautam.jpg" alt="team">
+                        <h3 class="carousel--team-name text-white">Gautam Bajaj</h3>
+                        <p class="carousel--team-title text-white">Technical Advisor</p>
+                        <a class="btn" href="https://www.linkedin.com/in/d34th4ck3r/" target="_blank" rel="noopener" aria-label="linkedin">LinkedIn</a>
                     </div>
                     <div class="column">
                         <img class="carousel--advisors-img" src="assets/advisors/eiad.jpg" alt="advisors">
