--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                     <div class="column">
                         <h1 class="text-white mb1">BGR: the bitgrit token</h1>
                         <p class="lead text-white mb3">Powering decentralized and democratic AI</p>
+                        <a class="btn" href="https://res.cloudinary.com/mabbas/video/upload/v1612818100/bitgrit/video_bitgrit_iiqnv6.mp4" target="_blank" rel="noopener">Learn more</a>
                     </div>                 
                 </div>
             </div>
